[package]
name = "wasm"
version = "0.1.0"
authors = ["Joel Shepherd <github.com/joelshepherd>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
native = { path = "../native" }
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
